[Averan] Updated TexPrinter.